# planar2

./: .gitignore  Dockerfile  Pipfile  README.md  alembic.ini  docker-compose-prod.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: 12d607a9585a_roster_short_update3.py  1633d2c6116c_initial.py  19a2320f1524_roster_short_update.py  4b1db1b6c8a6_user.py  4b217398aa2e_user.py  5613f37f882d_initial4.py  6adc337daa52_initial4.py  7a6ce795b28e_initial.py  7b4a25c87802_initial.py  8499fa34dc9c_roster_short_update4.py  882b835f1669_initial3.py  8a0c5d430ab1_initial6.py  8b08745858f5_roster_short.py  909ee96def4d_initial.py  a13519bd9411_unavail_uuid.py  a161ab8c917f_roster_short_update3.py  a8e50206cb4c_initial5.py  ad2e1e4a9880_user.py  bd69e8b549a0_roster_short_update.py  c5ef0a65a925_userrole_id.py  cacbf30e7e95_user.py  cf95c3bff9a6_user.py  da4dbe8bbd20_initial.py  ddc5ecfb9d42_user.py  de64afe0c347_unavail.py  f789c4b09256_roster_short_update2.py  fece060b1c7d_initial.py  ff57dae93cae_initial2.py
api/: .env  README.md  ReadME.md  crud.py  database.py  dependencies.py  emails.py  main.py  models.py  schemas.py  send-in-blue.py  send_email.py
api/routers/: departments.py  email.py  events.py  login.py  unavailability.py  users.py
api/templates/email/: email.html
backend/: Dockerfile  backend.dockerfile
backend/app/: alembic.ini
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0457423a22b1_initial.py  (+7 more)
backend/app/app/: main.py  utils.py
env/Scripts/: activate  activate.bat
(+102 files in other folders)
