[tool.poetry]
name = "planar2"
version = "0.1.0"
description = ""
authors = ["Shammah Anucha <shammah.anucha@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
SQLAlchemy = "^1.4.41"
fastapi-mail = "^1.1.4"
python-dotenv = "^0.21.0"
black = "^22.8.0"
fastapi = "^0.83.0"
sib-api-v3-sdk = "^7.5.0"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.4"
sqlmodel = "^0.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
